--- a/index.html
+++ b/index.html
@@ -39,53 +39,35 @@
         <div class="frame">
             <div class="nav">
                 <ul class="links">
-                    <li class="signin-active"><a class="btn">Existing User</a></li>
-                    <li class="signup-inactive"><a class="btn">New User</a></li>
+                    <li class="signin-active"><a class="btn">Sign In</a></li>
+                    <li class="signup-inactive"><a class="btn">Register</a></li>
                 </ul>
             </div>
             <div ng-app ng-init="checked = false">
+                <!-- Login -->
                 <form class="form-signin" action="" method="post" name="form">
-                    <label for="username">Username</label>
-                    <input class="form-styling" type="text" name="username" placeholder="" />
                     <label for="email">Email</label>
-                    <input class="form-styling" type="text" name="username" placeholder="" />
+                    <input name="email" class="form-styling" type="text" placeholder="" />
                     <label for="password">Password</label>
-                    <input class="form-styling" type="password" name="password" placeholder="" />
-                    <label for="password_verify">Verify Password</label>
-                    <input class="form-styling" type="password" name="password_verify" placeholder="" />
+                    <input name="password" class="form-styling" type="password" placeholder="" />
                     <input type="checkbox" id="checkbox" />
-                    <label for="checkbox"><span class="ui"></span>Keep me signed in</label>
+                    <label for="checkbox"><span class="ui"></span>Keep me signed in?</label>
                     <div class="btn-animate"> <a class="btn-signin">Sign in </a> </div>
+                    <a class="forgot-password" href="#">Forgot password?</a>
                 </form>
-                git push https://Amazon-_ou_2022.ahuzmeza!
-                @github.com/ahuzmeza/_ou.git
-
+                <!-- Signup -->
                 <form class="form-signup" action="" method="post" name="form">
-                    <input class="form-styling" type="text" name="username" placeholder="" />
+                    <label for="username">Username</label>
+                    <input name="username" class="form-styling" type="text" placeholder="" />
                     <label for="email">Email</label>
-                    <input class="form-styling" type="text" name="username" placeholder="" />
+                    <input name="email" class="form-styling" type="text" placeholder="" />
                     <label for="password">Password</label>
-                    <input class="form-styling" type="password" name="password" placeholder="" />
+                    <input name="password" class="form-styling" type="password" placeholder="" />
                     <label for="password_verify">Verify Password</label>
-                    <input class="form-styling" type="password" name="password_verify" placeholder="" />
-                    <input type="checkbox" id="checkbox" />
-                    <label for="checkbox"><span class="ui"></span>Keep me signed in</label>
-                    <input class="form-styling" type="text" name="confirmpassword" placeholder="" />
-                    <a ng-click="checked = !checked" class="btn-signup">REGISTER</a>
+                    <input name="password_verify" class="form-styling" type="password" placeholder="" />
+                    <a ng-click="checked = !checked" class="btn-signup">Create Account</a>
                 </form>
-                <div class="success">
-                    <svg width="270" height="270" xmlns="http://www.w3.org/2000/svg"
-                        xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 60 60" id="check"
-                        ng-class="checked ? 'checked' : ''">
-                        <path fill="#ffffff"
-                            d="M40.61,23.03L26.67,36.97L13.495,23.788c-1.146-1.147-1.359-2.936-0.504-4.314 c3.894-6.28,11.169-10.243,19.283-9.348c9.258,1.021,16.694,8.542,17.622,17.81c1.232,12.295-8.683,22.607-20.849,22.042 c-9.9-0.46-18.128-8.344-18.972-18.218c-0.292-3.416,0.276-6.673,1.51-9.578" />
-                        <div class="successtext">
-                            <p> New User registered, Kindly check your email for confirmation.</p>
-                        </div>
-                </div>
             </div>
-            <div class="forgot"> <a href="#">Forgot your password?</a> </div>
-
         </div>
 
 </body>
@@ -101,15 +83,6 @@
             $(".signin-active").toggleClass("signin-inactive");
             $(".forgot").toggleClass("forgot-left");
             $(this).removeClass("idle").addClass("active");
-        });
-    });
-
-    $(function () {
-        $(".btn-signup").click(function () {
-            $(".nav").toggleClass("nav-up");
-            $(".form-signup-left").toggleClass("form-signup-down");
-            $(".success").toggleClass("success-left");
-            $(".frame").toggleClass("frame-short");
         });
     });
 
